# temperature-checker

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  database_schema.sql  pyproject.toml  set_window_state.py  temp_checker.py  temp_checker_refactored.py  test_integration.py  test_temp_checker.py  test_utility.py
.github/workflows/: test.yml
