[tool.poetry]
name = "temperature-checker"
version = "0.1.0"
description = "Monitor outdoor temperature and send Telegram notifications for opening/closing windows"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=temp_checker_refactored",
    "--cov=set_window_state", 
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=94"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "utility: Utility script tests"
]

[tool.coverage.run]
source = ["."]
omit = [
    "test_*.py",
    "*/tests/*",
    "*/test/*",
    "__pycache__/*",
    "*.pyc"
]