[tool.poetry]
name = "temperature-checker"
version = "0.1.0"
description = "Monitor outdoor temperature and send Telegram notifications for opening/closing windows"
authors = ["Rory McDaniel"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
mypy = "^1.8.0"
types-requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=temp_checker",
    "--cov=set_window_state", 
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=94"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "utility: Utility script tests"
]

[tool.coverage.run]
source = ["."]
omit = [
    "test_*.py",
    "*/tests/*",
    "*/test/*",
    "__pycache__/*",
    "*.pyc"
]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_any_unimported = true
# Warn about Any usage but don't completely ban it
# disallow_any_expr = false  
# disallow_any_explicit = false
disallow_any_decorated = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
show_error_codes = true